--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,7 @@
 		</div>
 		<div id="chat" class="ultblock">
 			<ul></ul>
-			<button>Submit</button>
+			<button>Enter</button>
 		</div>
 		
 	</div>
