Added promotion, board flipping and fix event bugs

--- a/static/index.html
+++ b/static/index.html
@@ -15,18 +15,30 @@
 		<div id="tables">
 			<table id="gametable"></table>
 			<table id="promotetable">
-				<tr class="rank1">
-					<td class="r1 f1 dark">
+				<tr class="rankP">
+					<td class="Pwhite f1 darkgold">
 						<div class="whiteR"></div>
 					</td>
-					<td class="r1 f2 light">
+					<td class="Pwhite f2 lightgold">
 						<div class="whiteN"></div>
 					</td>
-					<td class="r1 f3 dark">
+					<td class="Pwhite f3 darkgold">
 						<div class="whiteB"></div>
 					</td>
-					<td class="r1 f4 light">
+					<td class="Pwhite f4 lightgold" select="selected">
 						<div class="whiteQ"></div>
+					</td>
+					<td class="Pblack f5 darkgold">
+						<div class="blackR"></div>
+					</td>
+					<td class="Pblack f6 lightgold">
+						<div class="blackN"></div>
+					</td>
+					<td class="Pblack f7 darkgold">
+						<div class="blackB"></div>
+					</td>
+					<td class="Pblack f8 lightgold" select="selected">
+						<div class="blackQ"></div>
 					</td>
 				</tr>
 			</table>
